--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,5 @@
 ---
 ---
 
-@import "minima";       // This loads all of Minima’s core styles
-@import "minima/custom"; // Optional (only if you have overrides in _sass/minima)
-@import "custom-styles"; // Your own overrides
+@import "minima/skins/classic";
+@import "minima/initialize";
